@@ -2225,6 +2225,11 @@ void CMainFrame::OnPluginUnpackMode(UINT nID )
 
 void CMainFrame::OnUpdatePluginUnpackMode(CCmdUI* pCmdUI) 
 {
+	if (GetOptionsMgr()->GetBool(OPT_PLUGINS_ENABLED))
+		pCmdUI->Enable(TRUE);
+	else
+		pCmdUI->Enable(FALSE);
+
 	if (pCmdUI->m_nID == ID_UNPACK_MANUAL)
 		pCmdUI->SetRadio(PLUGIN_MANUAL == g_bUnpackerMode);
 	if (pCmdUI->m_nID == ID_UNPACK_AUTO)
@@ -2246,6 +2251,11 @@ void CMainFrame::OnPluginPrediffMode(UINT nID )
 
 void CMainFrame::OnUpdatePluginPrediffMode(CCmdUI* pCmdUI) 
 {
+	if (GetOptionsMgr()->GetBool(OPT_PLUGINS_ENABLED))
+		pCmdUI->Enable(TRUE);
+	else
+		pCmdUI->Enable(FALSE);
+
 	if (pCmdUI->m_nID == ID_PREDIFFER_MANUAL)
 		pCmdUI->SetRadio(PLUGIN_MANUAL == g_bPredifferMode);
 	if (pCmdUI->m_nID == ID_PREDIFFER_AUTO)
@@ -2256,7 +2266,10 @@ void CMainFrame::OnUpdatePluginPrediffMode(CCmdUI* pCmdUI)
  */
 void CMainFrame::OnUpdateReloadPlugins(CCmdUI* pCmdUI)
 {
-	pCmdUI->Enable(TRUE);
+	if (GetOptionsMgr()->GetBool(OPT_PLUGINS_ENABLED))
+		pCmdUI->Enable(TRUE);
+	else
+		pCmdUI->Enable(FALSE);
 }
 
 void CMainFrame::OnReloadPlugins()
